# bazel_bats

./: BUILD.bazel  README.md  WORKSPACE  bats_test.bzl  runner.sh  script.sh  test.bats
bats/: BUILD.assert.bazel  BUILD.core.bazel  BUILD.support.bazel
